# quickcoach-scraper

./: .gitignore  README.md  pivot_data.py  pyproject.toml  quickcoach-pt_fitcojohn.csv  quickcoach_full.csv  quickcoach_pivoted.csv  quickcoach_scrape.py
.claude/: settings.local.json
src/quickcoach_export/: main.py  quickcoach_scrape.py
